--- a/projetocompmoveliago/package.json
+++ b/projetocompmoveliago/package.json
@@ -7,10 +7,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.7",
+    "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "firebase": "8.2.3",
     "@expo/vector-icons": "^14.0.0",
     "react-native-paper": "4.9.2",
     "react-native-screens": "3.31.1",
