--- a/projetocompmoveliago/package.json
+++ b/projetocompmoveliago/package.json
@@ -20,7 +20,9 @@
     "react-native-gesture-handler": "~2.16.1",
     "@react-navigation/bottom-tabs": "*",
     "react-native-safe-area-context": "4.10.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/drawer": "*",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
