--- a/projetocompmoveliago/package.json
+++ b/projetocompmoveliago/package.json
@@ -16,13 +16,13 @@
     "react-native-paper": "4.9.2",
     "react-native-screens": "3.31.1",
     "@react-navigation/stack": "*",
+    "react-native-reanimated": "~3.10.1",
+    "@react-navigation/drawer": "*",
     "@react-navigation/native": "*",
     "react-native-gesture-handler": "~2.16.1",
     "@react-navigation/bottom-tabs": "*",
     "react-native-safe-area-context": "4.10.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/drawer": "*",
-    "react-native-reanimated": "~3.10.1"
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
