--- a/projetocompmoveliago/package.json
+++ b/projetocompmoveliago/package.json
@@ -12,6 +12,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "firebase": "8.2.3",
+    "expo-haptics": "~13.0.1",
     "@expo/vector-icons": "^14.0.0",
     "react-native-paper": "4.9.2",
     "react-native-screens": "3.31.1",
